[gd_scene load_steps=11 format=3 uid="uid://vqsnqspiihy7"]

[ext_resource type="Script" path="res://Scenes/Company/company.gd" id="1_spy8t"]
[ext_resource type="Texture2D" uid="uid://c8a30o7nhnqs1" path="res://Graphics/Company_Menu/Buttons/expand _button.png" id="2_wn0vy"]
[ext_resource type="Texture2D" uid="uid://cj8unfw227bs" path="res://Graphics/Company_Menu/Buttons/background.png" id="3_aasjj"]
[ext_resource type="PackedScene" uid="uid://dy01y2q64ljg6" path="res://Scenes/kami_scenes/kami_bar.tscn" id="3_bfqqr"]
[ext_resource type="Texture2D" uid="uid://bq4ykeniq03ub" path="res://Graphics/Entity_Spr/Character_Spr/character.png" id="4_ohsr1"]
[ext_resource type="Texture2D" uid="uid://eete4alku8ia" path="res://Scenes/kami_scenes/kami_assetss/pc_stuff.png" id="5_fvwsx"]
[ext_resource type="Texture2D" uid="uid://hai0lt4fwryl" path="res://Graphics/GUI/board.png" id="5_l2k62"]
[ext_resource type="Texture2D" uid="uid://dlk8i0jufrbxk" path="res://Scenes/kami_scenes/kami_assetss/pc_stuff_2.png" id="6_cekul"]
[ext_resource type="Texture2D" uid="uid://dkfrpe7s0gmem" path="res://Scenes/kami_scenes/kami_assetss/pc_stuff_3.png" id="7_usxpj"]
[ext_resource type="PackedScene" uid="uid://dqki2hinaj5f" path="res://Scenes/Company/Company Upgrades/company_upgrades.tscn" id="10_qfqt5"]

[node name="Company" type="Node2D"]
position = Vector2(589, 647)
script = ExtResource("1_spy8t")
max_length = 550

[node name="top_button" type="TextureButton" parent="."]
offset_left = -92.0
offset_top = -49.0
offset_right = 95.0
offset_bottom = 14.0
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(93, 31.5)
texture_normal = ExtResource("2_wn0vy")

[node name="ColorRect" type="TextureRect" parent="."]
offset_left = -589.0
offset_right = 563.0
offset_bottom = 602.0
texture = ExtResource("3_aasjj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = -319.0
offset_top = 1.0
offset_right = 281.0
offset_bottom = 313.0
theme_override_constants/separation = 11

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_ohsr1")

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture = ExtResource("5_l2k62")

[node name="Rooms" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 11
size_flags_vertical = 0

[node name="Room" parent="VBoxContainer/Rooms" instance=ExtResource("3_bfqqr")]
layout_mode = 2
size_flags_vertical = 4
texture = Array[Texture2D]([ExtResource("5_fvwsx"), ExtResource("6_cekul"), ExtResource("7_usxpj")])

[node name="Room2" parent="VBoxContainer/Rooms" instance=ExtResource("3_bfqqr")]
layout_mode = 2
size_flags_vertical = 4
texture = Array[Texture2D]([ExtResource("5_fvwsx"), ExtResource("6_cekul"), ExtResource("7_usxpj")])

[node name="Room3" parent="VBoxContainer/Rooms" instance=ExtResource("3_bfqqr")]
layout_mode = 2
size_flags_vertical = 4
texture = Array[Texture2D]([ExtResource("5_fvwsx"), ExtResource("6_cekul"), ExtResource("7_usxpj")])

[node name="company_upgrades" parent="." instance=ExtResource("10_qfqt5")]

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
offset_left = 315.0
offset_top = 2.0
offset_right = 562.0
offset_bottom = 309.0
color = Color(0.458824, 0.25098, 0.219608, 1)

[connection signal="pressed" from="top_button" to="." method="_on_texture_button_pressed"]
[connection signal="switch_row" from="VBoxContainer/Rooms/Room" to="." method="_on_room_switch_row"]
[connection signal="switch_row" from="VBoxContainer/Rooms/Room2" to="." method="_on_room_switch_row"]
[connection signal="switch_row" from="VBoxContainer/Rooms/Room3" to="." method="_on_room_switch_row"]
[connection signal="add_pc" from="company_upgrades" to="." method="_on_company_upgrades_add_pc"]
[connection signal="upgrade_pc" from="company_upgrades" to="." method="_on_company_upgrades_upgrade_pc"]
